update current player feature

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TIC TAC TOE</title>
+    
+    <link rel="shortcut icon" href="assets/images/favicon.svg" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <script src="app.ts" defer></script>
 </head>
@@ -19,12 +21,12 @@
             <span class="time">0:00</span>
         </div>
         <div class="player-info">
-            <div class="player-x active-player">
-                <span>X</span>
+            <div class="player-x x-bg">
+                <span>X</span>:
                 <span class="x-score">0</span>
             </div>
             <div class="player-o">
-                <span>O</span>
+                <span>O</span>:
                 <span class="o-score">0</span>
             </div>
         </div>
